--- a/app/src/main/res/layout/live_feed.xml
+++ b/app/src/main/res/layout/live_feed.xml
@@ -2,20 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="10">
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/camera_preview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_height="match_parent" />
 
-    <Button
-        android:id="@+id/btn_trigger"
-        android:text="Trigger"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="9" />
 
 </LinearLayout>
