PC to Android: WebCam + Screen -> Added \o/

--- a/app/src/main/res/layout/client_activity.xml
+++ b/app/src/main/res/layout/client_activity.xml
@@ -39,4 +39,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Connect" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:padding="5dp"
+        android:text="@string/client_get_ip"
+        android:textStyle="bold" />
 </LinearLayout>
